# SENTINAL

./: .gitignore  README.md
RedditPulse/: .gitignore  CODE_REVIEW.md  DATA_QUALITY_MAP.md  DOCUMENTATION.md  DOCUMENTATION_SUMMARY.md  (+21 more)
sentinel-control/services/sentinel-core/: pyproject.toml
sentinel-control/services/sentinel-core/sentinel/: __init__.py
sentinel-control/services/sentinel-core/sentinel/cueidea_bridge/: __init__.py  client.py  evidence_mapper.py  normalizer.py  schemas.py
sentinel-control/services/sentinel-core/sentinel/decision/: __init__.py  competitor_research.py  research_agent.py  source_ranker.py
sentinel-control/services/sentinel-core/sentinel/decision/debate/: __init__.py  agents.py  orchestrator.py  verdict.py
sentinel-control/services/sentinel-core/sentinel/execution/: __init__.py  action_runner.py  email_draft_executor.py  file_executor.py  gtm_pack.py  gtm_quality.py
sentinel-control/services/sentinel-core/sentinel/firewall/: __init__.py  approval_gate.py  dry_run.py  policy.py  risk_scorer.py
sentinel-control/services/sentinel-core/sentinel/learning/: __init__.py  eval_runner.py  feedback.py  memory.py  prompt_versions.py  self_improvement.py  trace_ledger.py
sentinel-control/services/sentinel-core/sentinel/shared/: __init__.py  db.py  enums.py  models.py
sentinel-control/services/sentinel-core/tests/: test_cueidea_bridge.py  test_debate_engine.py  test_evals.py  test_execution.py  test_firewall.py  test_gtm_pack.py  test_gtm_quality.py  test_learning_layer.py  test_models.py  test_research_agent.py  test_trace_ledger.py
(+440 files in other folders)
